# QuasarRush

./: CMakeLists.txt  README.md  index.html
assets/: palette.gpl  planet.ase
assets/levels/: 1_empty_space_and_targets.json  2_planet_and_targets.json  3_planet_and_enemy.json  4_two_stars_with_enemy.json  5_many_enemies.json  6_orbitingPlanets.json  __all_levels.json  empty_space_one_target.json  test.json  two_stars_with_enemies.json
assets_src/: cursor.ase  enemy.ase  enemyFlame.ase  explosion.ase  impact.ase  missile.ase  palette.gpl  planet.blend  quasar.blend  quasar.blend1  ship.ase  shipFlame.ase  shot.ase  target.ase
assets_src/backgrounds/: background_01.psd  background_02.psd  background_03.psd  background_04.psd  background_quasar.psd
assets_src/icons/: mg.ase  rocket.ase
src/game/: enemy.cpp  enemy.hpp  enemy_ai.hpp  enemy_ai_idle.cpp  enemy_ai_idle.hpp  enemy_flight_ai_stay.cpp  enemy_flight_ai_stay.hpp  enemy_load_info.hpp  enemy_shoot_ai_mg.cpp  enemy_shoot_ai_mg.hpp  explosion.cpp  explosion.hpp  explosion_spawn_interface.hpp  game_properties.hpp  impact_explosion.cpp  impact_explosion.hpp  info_text.cpp  info_text.hpp  level.cpp  level.hpp  main.cpp  missile.cpp  physic_system.cpp  physic_system.hpp  physics_system.cpp  physics_system.hpp  planet.cpp  planet.hpp  player.cpp  player.hpp  player_config.cpp  player_config.hpp  shot.cpp  shot.hpp  shot_interface.hpp  shot_mg.cpp  shot_mg.hpp  shot_missile.cpp  shot_missile.hpp  shot_spawn_interface.hpp  (+27 more)
src/game/hud/: health_display.cpp  health_display.hpp  hud.cpp  hud.hpp  reload_display.cpp  reload_display.hpp  time_display.cpp  time_display.hpp
src/jamtemplate/common/: bar.cpp  bar.hpp  button.cpp  button.hpp  collision.hpp  game_state.cpp  tilemap.hpp
src/jamtemplate/sdl/: game.cpp  render_window_lib.cpp  render_window_lib.hpp  shape.cpp  sprite.cpp  sprite_functions.cpp  text.cpp  text.hpp  texture_manager.cpp
src/jamtemplate/sfml/: line.cpp  sprite_functions.cpp  sprite_functions.hpp
